@@ -1,4 +1,12 @@
 ------------------------------------------------------
+Release 1 | Beta 0 | Development 0 | Experimental 5
+
+* Added ClipboardUtils
+
+* GUITextBox can now remove selections of text
+* GUITextBox can now replace selections of text
+
+------------------------------------------------------
 Release 1 | Beta 0 | Development 0 | Experimental 4
 
 * Added KeyboardShortcut
